<resources>
    <string name="app_name">CarCollection</string>
    <string name="item_age">%1$d anos</string>
    <string name="success_update">Item editado com sucesso</string>
    <string name="error_update">Erro ao editar o item</string>
    <string name="error_delete">Erro ao deletar o item</string>
    <string name="error_fetch_item">Erro ao buscar o item</string>
    <string name="success_delete">Item deletado com sucesso</string>
    <string name="generical_error">Erro desconhecido, clique para tentar novamente.</string>
    <string name="no_items">Nenhum item disponível.</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="error_add_item">Erro ao adicionar o item.</string>
    <string name="success_add_item">Item adicionado com sucesso.</string>
    <string name="location_permission_denied">Permissão de Localização negada.</string>
    <string name="hint_cellphone">+55 11 912345678</string>
    <string name="code_brazil">+55</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="hint_verify_sms">123456</string>
    <string name="verify_sms">Verificar SMS</string>
    <string name="menu_loggout">Sair</string>
    <string name="add_car">Adicionar Carro</string>
    <string name="delete_btn">Deletar</string>
    <string name="save_btn">Salvar</string>
    <string name="hint_add_license">Editar placa</string>
    <string name="take_picture">Tirar Foto</string>
    <string name="hint_license">Placa</string>
    <string name="hint_url_image">URL da imagem</string>
    <string name="select_location">Selecione o local no mapa:</string>
    <string name="hint_year">Ano</string>
    <string name="hint_car_name">Nome do carro</string>
    <string name="login_title">Login</string>
    <string name="cellphone_hint">Celular</string>
    <string name="verification_code">Código de Verificação</string>
    <string name="select_car_location">Selecione a localização do carro no mapa</string>
</resources>
